<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/characterFragment"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/app_name" />
        <item
            android:id="@+id/teamChatFragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_team_chat" />
        <item
            android:id="@+id/announcementChatFragment"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_announcements" />
        <item
            android:id="@+id/masterPlayerChatFragment"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_master_player" />
        <item
            android:id="@+id/notesFragment"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="Notes" />
        <item
            android:id="@+id/documentsFragment"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="Documents" />
    </group>

    <item
        android:id="@+id/menu_show_code"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_show_code"
        android:visible="false" />

    <item
        android:id="@+id/menu_logout"
        android:checkable="false"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout" />

</menu>