<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/characterFragment">

    <fragment
        android:id="@+id/characterFragment"
        android:name="com.fts.ttbros.character.CharacterFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/teamChatFragment"
        android:name="com.fts.ttbros.chat.ChatFragment"
        android:label="@string/menu_team_chat">
        <argument
            android:name="chatType"
            app:argType="string"
            android:defaultValue="team" />
    </fragment>

    <fragment
        android:id="@+id/announcementChatFragment"
        android:name="com.fts.ttbros.chat.ChatFragment"
        android:label="@string/menu_announcements">
        <argument
            android:name="chatType"
            app:argType="string"
            android:defaultValue="announcements" />
    </fragment>

    <fragment
        android:id="@+id/masterPlayerChatFragment"
        android:name="com.fts.ttbros.chat.ChatFragment"
        android:label="@string/menu_master_player">
        <argument
            android:name="chatType"
            app:argType="string"
            android:defaultValue="master_player" />
    </fragment>

    <fragment
        android:id="@+id/notesFragment"
        android:name="com.fts.ttbros.notes.NotesFragment"
        android:label="Notes" />

    <fragment
        android:id="@+id/documentsFragment"
        android:name="com.fts.ttbros.documents.DocumentsFragment"
        android:label="Documents" />

    <fragment
        android:id="@+id/accountFragment"
        android:name="com.fts.ttbros.account.AccountFragment"
        android:label="Account" />

</navigation>